Put in estimated final and final dates, and link to rfc11 per - https://lists.osgeo.org/pipermail/geos-devel/2022-September/010784.html

--- a/web/config.toml
+++ b/web/config.toml
@@ -5,6 +5,7 @@ theme = "hugo-geekdoc"
 pygmentsUseClasses = true
 pygmentsCodeFences = true
 disablePathToLower = true
+enableEmoji = true
 
 enableGitInfo = false
 
