Interrupt doc clarifications

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -297,7 +297,7 @@ typedef int (*GEOSTransformXYCallback)(
 
 /**
 * Callback function for use in interruption. The callback will be invoked _before_ checking for
-* interruption, so can be used to request it.
+* an interruption request and can be used to request interruption.
 *
 * \see GEOS_interruptRegisterCallback
 * \see GEOS_interruptRequest
@@ -308,20 +308,23 @@ typedef void (GEOSInterruptCallback)(void);
 typedef void (GEOSInterruptThreadCallback)(void*);
 
 /**
-* Register a function to be called when processing is interrupted on any thread.
+* Register a function to be called when a possible interruption point is reached
+* on any thread. The function may be used to request interruption.
+*
 * \param cb Callback function to invoke
-* \return the previously configured callback
+* \return the previously registered callback, or NULL
 * \see GEOSInterruptCallback
 */
 extern GEOSInterruptCallback GEOS_DLL *GEOS_interruptRegisterCallback(
     GEOSInterruptCallback* cb);
 
 /**
-* Register a function to be called when processing is interrupted on the current thread.
+* Register a function to be called when a possible interruption point is reached
+* on the current thread. The function may be used to request interruption.
 *
 * \param cb Callback function to invoke
 * \param context pointer to a context object that will be passed to `cb`
-* \return the previously configured callback
+* \return the previously registered callback, or NULL
 * \see GEOSInterruptCallback
 */
 extern GEOSInterruptThreadCallback GEOS_DLL *GEOS_interruptRegisterThreadCallback(
@@ -330,13 +333,14 @@ extern GEOSInterruptThreadCallback GEOS_DLL *GEOS_interruptRegisterThreadCallbac
 /**
 * Request safe interruption of operations. The next thread to check for an
 * interrupt will be interrupted. To request interruption of a specific thread,
-* instead call `GEOS_interruptThread` from a callback executed by that thread.
+* instead call GEOS_interruptThread() from a callback executed by that thread.
 */
 extern void GEOS_DLL GEOS_interruptRequest(void);
 
 /**
 * Request safe interruption of operations in the current thread. This function
-* should be called from a callback registered by `GEOS_interruptRegisterThreadCallback`.
+* should be called from a callback registered by GEOS_interruptRegisterThreadCallback()
+* or GEOS_interruptRegisterCallback().
 */
 extern void GEOS_DLL GEOS_interruptThread(void);
 
