--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ JTS_PORT=1.13.0
 
 dnl -- Version info for the CAPI
 CAPI_INTERFACE_CURRENT=11
-CAPI_INTERFACE_REVISION=7
+CAPI_INTERFACE_REVISION=8
 CAPI_INTERFACE_AGE=10
 
 dnl
@@ -23,7 +23,8 @@ dnl -- Release versions / C++ library SONAME will use these
 dnl -- encoding ABI break at every release
 dnl
 VERSION_MAJOR=3
-VERSION_MINOR=6 VERSION_PATCH=6
+VERSION_MINOR=6
+VERSION_PATCH=7
 VERSION="$VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH"
 
 dnl CAPI_VERSION_MAJOR=$(($CAPI_INTERFACE_CURRENT-$CAPI_INTERFACE_AGE))
