--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -4082,16 +4082,14 @@ extern GEOSGeometry GEOS_DLL *GEOSGeom_transformXY(
 * Snaps the vertices and segments of the first geometry to vertices of the
 * second geometry within the given tolerance.
 *
-* Snapping one geometry to another can improve robustness for overlay operations
-* by eliminating nearly-coincident edges (which cause problems during noding and
-* intersection calculation). Because too much snapping can result in invalid
-* topology being created, heuristics are used to determine the number and
-* location of snapped vertices that are likely safe to snap. These heuristics
-* may omit some potential snaps that are otherwise within the tolerance.
-*
 * Where possible, this operation tries to avoid creating invalid geometries;
 * however, it does not guarantee that output geometries will be valid.  It is
 * the responsibility of the caller to check for and handle invalid geometries.
+*
+* Because too much snapping can result in invalid
+* topology being created, heuristics are used to determine the number and
+* location of snapped vertices that are likely safe to snap. These heuristics
+* may omit some potential snaps that are otherwise within the tolerance.
 *
 * \param input An input geometry
 * \param snap_target A geometry to snap the input to
