--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -2734,7 +2734,7 @@ extern int GEOS_DLL GEOSNormalize(GEOSGeometry* g);
 * Non-polygonal geometries will not be modified.
 *
 * \param g Input geometry
-* \param exteriorCW if 1, exterior rings will be clockwise and interior ringts
+* \param exteriorCW if 1, exterior rings will be clockwise and interior rings
 *                         will be counter-clockwise
 * \return 0 on success or -1 on exception
 */
