C API: Add GEOSSTRtree_build
Also update C API docs to clarify which functions cause a tree to be constructed

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -1217,6 +1217,11 @@ extern GEOSSTRtree GEOS_DLL *GEOSSTRtree_create_r(
     GEOSContextHandle_t handle,
     size_t nodeCapacity);
 
+/** \see GEOSSTRtree_build */
+extern int GEOS_DLL GEOSSTRtree_build_r(
+    GEOSContextHandle_t handle,
+    GEOSSTRtree *tree);
+
 /** \see GEOSSTRtree_insert */
 extern void GEOS_DLL GEOSSTRtree_insert_r(
     GEOSContextHandle_t handle,
@@ -4583,6 +4588,17 @@ extern char GEOS_DLL GEOSPreparedDistanceWithin(
 extern GEOSSTRtree GEOS_DLL *GEOSSTRtree_create(size_t nodeCapacity);
 
 /**
+* Construct an STRtree from items that have been inserted. Once constructed,
+* no more items may be inserted into the tree. Functions that require a
+* constructed tree will build it automatically, so there is no need to call
+* `GEOSSTRtree_build` unless it is desired to explicity construct the tree
+* in a certain section of code or using a certain thread.
+*
+* \return 1 on success, 0 on error
+*/
+extern int GEOS_DLL GEOSSTRtree_build(GEOSSTRtree *tree);
+
+/**
 * Insert an item into an \ref GEOSSTRtree
 *
 * \param tree the \ref GEOSSTRtree in which the item should be inserted
@@ -4598,7 +4614,9 @@ extern void GEOS_DLL GEOSSTRtree_insert(
     void *item);
 
 /**
-* Query an \ref GEOSSTRtree for items intersecting a specified envelope
+* Query a \ref GEOSSTRtree for items intersecting a specified envelope.
+* The tree will automatically be constructed if necessary, after which
+* no more items may be added.
 *
 * \param tree the \ref GEOSSTRtree to search
 * \param g a GEOSGeomety from which a query envelope will be extracted
@@ -4617,6 +4635,8 @@ extern void GEOS_DLL GEOSSTRtree_query(
 * Returns the nearest item in the \ref GEOSSTRtree to the supplied geometry.
 * All items in the tree MUST be of type \ref GEOSGeometry.
 * If this is not the case, use GEOSSTRtree_nearest_generic() instead.
+* The tree will automatically be constructed if necessary, after which
+* no more items may be added.
 *
 * \param tree the \ref GEOSSTRtree to search
 * \param geom the geometry with which the tree should be queried
@@ -4629,6 +4649,8 @@ extern const GEOSGeometry GEOS_DLL *GEOSSTRtree_nearest(
 
 /**
 * Returns the nearest item in the \ref GEOSSTRtree to the supplied item
+* The tree will automatically be constructed if necessary, after which
+* no more items may be added.
 *
 * \param tree the STRtree to search
 * \param item the item with which the tree should be queried
@@ -4652,6 +4674,7 @@ extern const void GEOS_DLL *GEOSSTRtree_nearest_generic(
 
 /**
 * Iterate over all items in the \ref GEOSSTRtree.
+* This will not cause the tree to be constructed.
 *
 * \param tree the STRtree over which to iterate
 * \param callback a function to be executed for each item in the tree.
@@ -4664,6 +4687,8 @@ extern void GEOS_DLL GEOSSTRtree_iterate(
 
 /**
  * Removes an item from the \ref GEOSSTRtree
+ * The tree will automatically be constructed if necessary, after which
+ * no more items may be added.
  *
  * \param tree the STRtree from which to remove an item
  * \param g the envelope of the item to remove
