--- a/tools/geos-config.in
+++ b/tools/geos-config.in
@@ -53,10 +53,10 @@ while test $# -gt 0; do
       echo -L${libdir} -lgeos
       ;;
     --static-clibs)
-      echo -L${libdir} -lgeos_c -lgeos -lm
+      echo -L${libdir} -lgeos_c -lgeos -lstdc++ -lm
       ;;
     --static-cclibs)
-      echo -L${libdir} -lgeos -lm
+      echo -L${libdir} -lgeos -lstdc++ -lm
       ;;
     --cflags)
       echo -I${includedir}
