--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -28,6 +28,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Login to GitHub Container Registry
+      if: ${{ github.repository == 'libgeos/geos' }}
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
@@ -39,7 +40,7 @@ jobs:
         cp tools/ci/geosop/Dockerfile .
 
     - name: Build and Push
-      if: ${{ github.repository == 'libgeos/geos' }} }}
+      if: ${{ github.repository == 'libgeos/geos' }}
       uses: docker/build-push-action@v2
       with:
         context: .
