--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -17,6 +17,7 @@ jobs:
   linux:
 
     name: 'Linux'
+    if: github.repository == 'libgeos/geos'
     runs-on: ubuntu-latest
 
     steps:
@@ -28,7 +29,6 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Login to GitHub Container Registry
-      if: ${{ github.repository == 'libgeos/geos' }}
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
@@ -40,7 +40,6 @@ jobs:
         cp tools/ci/geosop/Dockerfile .
 
     - name: Build and Push
-      if: ${{ github.repository == 'libgeos/geos' }}
       uses: docker/build-push-action@v2
       with:
         context: .
